--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
         <br><br>
 
         <!-- Gender -->
-        <span>Gender:</span>
+        <label>Gender</label>
         <label for="male">Male</label>
         <input type="radio" id="male" name="gender" value="male" required>
         <label for="female">Female</label>
@@ -31,7 +31,7 @@
         <br><br>
 
         <!-- Laptop Brands -->
-        <label for="laptop">Laptop Brands:</label>
+        <label for="laptop">Laptop Brands</label>
         <select id="laptop" name="laptop">
             <option value="apple">Apple</option>
             <option value="asus">Asus</option>
@@ -40,23 +40,23 @@
         <br><br>
 
         <!-- Age -->
-        <label for="age">Age:</label>
+        <label for="age">Age</label>
         <input type="number" id="age" name="age" required>
         <br><br>
 
         <!-- Date of Birth -->
-        <label for="dob">Date of Birth:</label>
+        <label for="dob">Date of Birth</label>
         <input type="date" id="dob" name="dob" required>
         <br><br>
 
         <!-- Password -->
-        <label for="password">Password:</label>
+        <label for="password">Password</label>
         <input type="password" id="password" name="password" required>
         <br><br>
 
         <!-- Portfolio URL -->
-        <label for="portfolio">Portfolio URL:</label>
-        <input type="url" id="portfolio" name="portfolio">
+        <label for="portfolio">Portfolio URL</label>
+        <input type="url" id="portfolio" name="portfolio" >
         <br><br>
 
         <!-- Submit Button -->
